feat: add DCP TCK tests (#5003)
* add verifier presentation flow test

* mocked DID server

* docker tests, fix bugs

* fix tests