@@ -20,6 +20,7 @@ import org.eclipse.edc.iam.identitytrust.spi.CredentialServiceUrlResolver;
 import org.eclipse.edc.iam.identitytrust.spi.SecureTokenService;
 import org.eclipse.edc.iam.identitytrust.spi.validation.TokenValidationAction;
 import org.eclipse.edc.iam.verifiablecredentials.spi.VerifiableCredentialValidationService;
+import org.eclipse.edc.iam.verifiablecredentials.spi.model.VerifiableCredential;
 import org.eclipse.edc.iam.verifiablecredentials.spi.model.VerifiablePresentation;
 import org.eclipse.edc.iam.verifiablecredentials.spi.model.VerifiablePresentationContainer;
 import org.eclipse.edc.iam.verifiablecredentials.spi.validation.CredentialValidationRule;
@@ -34,6 +35,7 @@ import org.eclipse.edc.util.string.StringUtils;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -123,6 +125,13 @@ public class IdentityAndTrustService implements IdentityService {
 
     @Override
     public Result<ClaimToken> verifyJwtToken(TokenRepresentation tokenRepresentation, VerificationContext context) {
+        // strip out the "Bearer " prefix
+        var token = tokenRepresentation.getToken();
+        if (!token.startsWith("Bearer ")) {
+            return failure("Token is not a Bearer token");
+        }
+        token = token.replace("Bearer ", "").trim();
+        tokenRepresentation = tokenRepresentation.toBuilder().token(token).build();
         var claimTokenResult = tokenValidationAction.apply(tokenRepresentation);
 
         if (claimTokenResult.failed()) {
@@ -147,8 +156,9 @@ public class IdentityAndTrustService implements IdentityService {
         var siTokenString = siToken.getContent().getToken();
 
         // get CS Url, execute VP request
+        var requestedScopes = context.getScopes().stream().toList();
         var vpResponse = credentialServiceUrlResolver.resolve(issuer)
-                .compose(url -> credentialServiceClient.requestPresentation(url, siTokenString, context.getScopes().stream().toList()));
+                .compose(url -> credentialServiceClient.requestPresentation(url, siTokenString, requestedScopes));
 
         if (vpResponse.failed()) {
             return vpResponse.mapEmpty();
@@ -156,13 +166,36 @@ public class IdentityAndTrustService implements IdentityService {
 
         var presentations = vpResponse.getContent();
 
-        var result = verifiableCredentialValidationService.validate(presentations, getAdditionalValidations());
+        // check all requested credentials are present
+
+        var result = validateRequestedCredentials(presentations, requestedScopes)
+                .compose(unused -> verifiableCredentialValidationService.validate(presentations, getAdditionalValidations()));
+
 
         return result
                 .compose(u -> verifyPresentationIssuer(issuer, presentations))
                 .compose(u -> claimTokenCreatorFunction.apply(presentations.stream().map(p -> p.presentation().getCredentials().stream())
                         .reduce(Stream.empty(), Stream::concat)
                         .toList()));
+    }
+
+    private Result<Void> validateRequestedCredentials(List<VerifiablePresentationContainer> presentations, List<String> requestedScopes) {
+        var allCreds = presentations.stream()
+                .flatMap(p -> p.presentation().getCredentials().stream())
+                .toList();
+        if (requestedScopes.size() > allCreds.size()) {
+            return Result.failure("Number of requested credentials does not match the number of returned credentials");
+        }
+
+        var types = allCreds.stream().map(VerifiableCredential::getType)
+                .flatMap(Collection::stream)
+                .distinct()
+                .toList();
+
+
+        return requestedScopes.stream().allMatch(scope -> types.stream().anyMatch(scope::contains)) ?
+                Result.success() :
+                Result.failure("Not all requested credentials are present in the presentation response");
     }
 
     /**
@@ -183,7 +216,7 @@ public class IdentityAndTrustService implements IdentityService {
 
 
     private Collection<? extends CredentialValidationRule> getAdditionalValidations() {
-        return List.of();
+        return Collections.emptyList();
     }
 
 
